src-ken&y/objects/Asset_Class__c.object
<CustomObject>
    <customHelpPage>HelpAssetClass</customHelpPage>
    <description>Relates fixed assets to their approriate GL Accounts and stores instructions on how to process the depreciation.</description>
    <fields>
        <fullName>Accumulated_Depreciation_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This account stores the assets accumulated depreciation amount over the course of its useful life.</inlineHelpText>
        <label>Accumulated Depreciation GL Account</label>
        <lookupFilter>
             <active>true</active>
             <errorMessage>GL Account selected must be active</errorMessage>
             <filterItems>
                 <field>GL_Account__c.Active__c</field>
                 <operation>equals</operation>
                 <value>True</value>
             </filterItems>
             <isOptional>false</isOptional>
         </lookupFilter>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Asset Classes (Accumulated Depreciation GL Account)</relationshipLabel>
        <relationshipName>Accumulated_Asset_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Asset Classes</relationshipLabel>
        <relationshipName>Asset_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Declining_Balance__c</fullName>
        <label>Declining Balance</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Depreciation_Method__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>200%</fullName>
                </value>
                <value>
                    <fullName>150%</fullName>
                </value>
                <value>
                    <fullName>Straight Line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Depreciated_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default disposition GL Account used when asset is retired or scrapped.</description>
        <inlineHelpText>The account used to record the gain/loss on the asset when sold or retired.</inlineHelpText>
        <label>Disposition GL Account</label>
         <lookupFilter>
             <active>true</active>
             <errorMessage>GL Account selected must be active</errorMessage>
             <filterItems>
                 <field>GL_Account__c.Active__c</field>
                 <operation>equals</operation>
                 <value>True</value>
             </filterItems>
             <isOptional>false</isOptional>
         </lookupFilter>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Asset Classes (Depreciated GL Account)</relationshipLabel>
        <relationshipName>Depreciated_Asset_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Depreciation_Convention__c</fullName>
        <inlineHelpText>Fixed assets are not always acquired or disposed of on the first or last day of the year. The depreciation convention is used to average the depreciation in the first and last year of the asset’s life. Depends on the depreciation period.</inlineHelpText>
        <label>Depreciation Convention</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Depreciation_Period__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Mid Month</fullName>
                </value>
                <value>
                    <fullName>Full Month</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Mid Quarter</fullName>
                </value>
                <value>
                    <fullName>Full Quarter</fullName>
                </value>
                <value>
                    <fullName>Half Year</fullName>
                </value>
                <value>
                    <fullName>Full Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Depreciation_Method__c</fullName>
        <inlineHelpText>The depreciation method used for assets assigned to this class. Options include “Straight Line”, “Declining Balance”, “Sum of Years”, or “MARCS”.</inlineHelpText>
        <label>Depreciation Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Straight Line</fullName>
                </value>
                <value>
                    <fullName>Declining Balance</fullName>
                </value>
                <value>
                    <fullName>Sum of Years</fullName>
                </value>
                <value>
                    <fullName>MACRS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Depreciation_Period__c</fullName>
        <label>Depreciation Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expense_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Expense GL Account - The depreciated value of the asset will be debited from this GL account at each depreciation cycle. Note: The Accumulated Depreciation GL account is defined in the accounting rules.</description>
        <inlineHelpText>The expense GL account is debited after each depreciation cycle.</inlineHelpText>
        <label>Expense GL Account</label>
        <lookupFilter>
             <active>true</active>
             <errorMessage>GL Account selected must be active</errorMessage>
             <filterItems>
                 <field>GL_Account__c.Active__c</field>
                 <operation>equals</operation>
                 <value>True</value>
             </filterItems>
             <isOptional>false</isOptional>
         </lookupFilter>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Asset Classes (Expense GL Account)</relationshipLabel>
        <relationshipName>Expense_Asset_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Fixed Asset GL Account - The full acquisition cost of the asset will be debited from this GL account when the asset is first activated.</description>
        <inlineHelpText>The full acquisition cost is debited from this account.</inlineHelpText>
        <label>Fixed Asset GL Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>GL Account selected must be active</errorMessage>
            <filterItems>
                <field>GL_Account__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Asset Classes</relationshipLabel>
        <relationshipName>Asset_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Life_in_Months__c</fullName>
        <description>The default life in months for assets related to this Asset Class.</description>
        <inlineHelpText>The default value for assets assigned to this class. You can change the number for a specific asset.</inlineHelpText>
        <label>Life in Months</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Asset Class</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Asset Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Company_Required_On_Asset_Class</fullName>
        <active>true</active>
        <description>Company Required on Asset Class</description>
        <errorConditionFormula>ISNULL(Company__c)</errorConditionFormula>
        <errorMessage>Please select a company for this Asset Class.</errorMessage>
    </validationRules>
</CustomObject>